Updated comments for clarity.

--- a/MnM_Count/mnmcount.ipynb
+++ b/MnM_Count/mnmcount.ipynb
@@ -6,26 +6,45 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyspark in /Users/wriosmar/anaconda3/lib/python3.11/site-packages (3.5.5)\n",
+      "Requirement already satisfied: py4j==0.10.9.7 in /Users/wriosmar/anaconda3/lib/python3.11/site-packages (from pyspark) (0.10.9.7)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/03/19 18:41:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/03/19 19:19:17 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import count\n",
+    "# Install pyspark package\n",
+    "%pip install pyspark\n",
     "\n",
+    "from pyspark.sql import SparkSession # type: ignore\n",
+    "from pyspark.sql.functions import count # type: ignore\n",
+    "\n",
+    "# Build a SparkSession using SparkSession APIs.\n",
+    "# If one does not exist, create a new one.\n",
     "spark = (SparkSession\n",
     "         .builder\n",
     "         .appName(\"PythonMnMCount\")\n",
     "         .config(\"spark.driver.bindAddress\", \"127.0.0.1\")\n",
     "         .getOrCreate())\n",
+    "\n",
+    "#Get the M&M dataset\n",
     "mnm_file = \"data/mnm_dataset.csv\"\n",
     "\n",
+    "# Read the file into a Spark DataFrame using the CSV\n",
+    "# by infering the schema and specifying that the\n",
+    "# file contains a header.\n",
     "mnm_df = (spark.read.format(\"csv\")\n",
     "          .option(\"header\", \"true\")\n",
     "          .option(\"inferSchema\", \"true\")\n",
@@ -111,12 +130,18 @@
     }
    ],
    "source": [
+    "# 1. Select from the DataFrame the fields State, Color, and Count.\n",
+    "# 2. Group by State and Color.\n",
+    "# 3. Aggregate counts of all colors and groupBy() State and Color.\n",
+    "# 4. orderBy() in descending order.\n",
     "count_mnm_df = (mnm_df\n",
     "                .select(\"State\", \"Color\", \"Count\")\n",
     "                .groupBy(\"State\", \"Color\")\n",
     "                .agg(count(\"Count\").alias(\"Total\"))\n",
     "                .orderBy(\"Total\", ascending=False))\n",
     "\n",
+    "# Show the resulting aggregations for all the states and colors.\n",
+    "# Note: show() is an action, which will trigger the above querey to be executed.\n",
     "count_mnm_df.show(n=60, truncate=False)\n",
     "print(\"Total Rows = %d\" % (count_mnm_df.count()))"
    ]
@@ -145,6 +170,12 @@
     }
    ],
    "source": [
+    "# 1. Select from all rows in the DataFrame\n",
+    "# 2. Filter only where State is CA.\n",
+    "# 3. groupBy() State and Color.\n",
+    "# 4. Aggregate counts for each color.\n",
+    "# 5. orderBy() in descending order.\n",
+    "# Find the aggregated for California by filtering\n",
     "ca_count_mnm_df = (mnm_df\n",
     "                   .select(\"State\", \"Color\", \"Count\")\n",
     "                   .where(mnm_df.State == \"CA\")\n",
@@ -152,6 +183,8 @@
     "                   .agg(count(\"Count\").alias(\"Total\"))\n",
     "                   .orderBy(\"Total\", ascending=False))\n",
     "\n",
+    "# Show the resulting aggregations for CA.\n",
+    "# Note: show() is an action, which will trigger the above querey.\n",
     "ca_count_mnm_df.show(n=10, truncate=False)"
    ]
   },
@@ -161,6 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Stop the SparkSession.\n",
     "spark.stop()"
    ]
   },
